--- a/pylaform/templates/summary_iter.html
+++ b/pylaform/templates/summary_iter.html
@@ -28,6 +28,7 @@
                             {{ "checked" if state }}>
                 </td>
                 <td>
+                    <input type="hidden" id="{{ id }}_summaryorder" name="{{ id }}_summaryorder" value="{{ id }}">
                     <button class="btn btn-danger"
                             id="deleteRow"
                             type="button">
