--- a/pylaform/templates/employment_iter.html
+++ b/pylaform/templates/employment_iter.html
@@ -51,6 +51,7 @@
                 <td>
                     <button class="btn btn-danger"
                                     id="deleteRow"
+                                    value="{{ positionid }}"
                                     type="button">
                                 <i class="bi bi-trash"></i>
                                 Delete
